package core.domain.exercise;

public enum Difficulty
{
    EASY,    // Leicht
    MEDIUM,  // Mittel
    HARD     // Schwer
}
