package core.domain.exercise;

public enum MuscleGroup
{
    CHEST,
    BACK,
    SHOULDERS,
    ARMS,
    LEGS,
    CORE
}
