package de.neeroxz.exercise;

/**
 * Enum: WorkoutType
 *
 * @author NeeroxZ
 * @date 21.10.2024
 */

public enum WorkoutType {
    KRAFTSPORT,
    CARDIO,
    YOGA
}

